# CCL-0.1

./: .ccl_notes.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ccl_dashboard.html  ccl_dashboard_server.py  ccl_dashboard_ui.html  package-lock.json  package.json  requirements.txt  setup.py
DemoApp/: .ccl  README.md  main.py
HelloCCL/: .ccl  index.html  server.py
config/: ccl_config.json
core/: ccl_ai.py  ccl_boot.py  ccl_interpreter.py  ccl_templates.py  ccl_terminal.py  ccl_tools.py  ccl_tools.py.save
deploy/: deploy.css  deploy.js  index.html
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
doctor/: doctor.css  doctor.js  index.html
forge/: forge.css  forge.js  index.html
founder/: founder.css  founder.js  index.html
galaxy/: galaxy.css  galaxy.js  index.html
kernel/docs/: KERNEL_RESEARCH.md
linux/: README.md
linux/scripts/: build-base.sh
marketing/: PRODUCT_HUNT_LAUNCH.md  index.html  marketing.css
marketplace/: MONETIZATION.md
mindrouter/: index.ts  providers.ts
mobile/: App.final.tsx  App.tsx  app.json  eas.json  package.json
scripts/: build-mobile.sh  god_mode_demo.ccl  hello_world.ccl
settings/: ai-settings.css  ai-settings.html  ai-settings.js
shell/: index.html
shell/scripts/: main.js
shell/styles/: main.css
